--- a/about/splash.html
+++ b/about/splash.html
@@ -10,191 +10,195 @@
 </p>
 <table>
 <tr><td>
-  <a href="splash/gimp1_1_splash-1.5.png"><img src="splash/gimp_splash-1.5-t.png" width="150" height="94" alt="1.5"/></a>
-  <p>CVS: 1.5</p>
-  <p>version: 1.1.0 </p>
-  <p>author:  Adrian</p>
+  <div  class="subtitle">tarball: 1.1.0 </div>
+  <a href="splash/gimp1_1_splash-1.5.png"><img src="splash/gimp_splash1-1.5-t.png" width="150" height="94" alt="1.5"/></a>
+  <p>CVS: 1.5<br />
+  artist:  Adrian</p>
 </td><td>
-  <a href="splash/gimp1_1_splash-1.5.png"><img src="splash/gimp_splash-1.5-t.png" width="150" height="94" alt="1.5"/></a>
-  <p>CVS: 1.5 </p>
-  <p>version: 1.1.1 </p>
-  <p>author:  Adrian</p>
+  <div  class="subtitle">tarball:  1.1.1</div>
+  <a href="splash/gimp1_1_splash-1.5.png"><img src="splash/gimp_splash1-1.5-t.png" width="150" height="94" alt="1.5"/></a>
+  <p>CVS: 1.5 <br />
+  artist:  Adrian</p>
 </td></tr>
 <tr><td>
-  <a href="splash/gimp1_1_splash-1.7.png"><img src="splash/gimp_splash-1.7-t.png" width="150" height="105" alt="1.7"/></a>
-  <p>CVS: 1.7</p>
-  <p>version: 1.1.2</p>
-  <p>author:  Adrian</p>
-</td><td>
-  <a href="splash/gimp1_1_splash-1.7.png"><img src="splash/gimp_splash-1.7-t.png" width="150" height="105" alt="1.7"/></a>
-  <p>CVS: 1.7</p>
-  <p>version:  1.1.3</p>
-  <p>author:  </p>
+  <div  class="subtitle">tarball: 1.1.2</div>
+  <a href="splash/gimp1_1_splash-1.7.png"><img src="splash/gimp_splash1-1.7-t.png" width="150" height="105" alt="1.7"/></a>
+  <p>CVS: 1.7<br />
+  artist:  Adrian</p>
+</td>td>
+  <div  class="subtitle">tarball: 1.1.3</div>
+  <a href="splash/gimp1_1_splash-1.7.png"><img src="splash/gimp_splash1-1.7-t.png" width="150" height="105" alt="1.7"/></a>
+  <p>CVS: 1.7<br />
+  artist:  </p>
 </td></tr>
 <tr><td>
-  <a href="splash/gimp1_1_splash-1.7.png"><img src="splash/gimp_splash-1.7-t.png" width="150" height="105" alt="1.7"/></a>
-  <p>CVS: 1.7</p>
-  <p>version:  1.1.4</p>
-  <p>author:  </p>
-</td><td>
-  <a href="splash/gimp1_1_splash-1.7.png"><img src="splash/gimp_splash-1.7-t.png" width="150" height="105" alt="1.7"/></a>
-  <p>CVS: 1.7</p>
-  <p>version:  1.1.5</p>
-  <p>author:  </p>
+  <div  class="subtitle">tarball: 1.1.4</div>
+  <a href="splash/gimp1_1_splash-1.7.png"><img src="splash/gimp_splash1-1.7-t.png" width="150" height="105" alt="1.7"/></a>
+  <p>CVS: 1.7<br />
+  artist:  </p>
+</td>td>
+  <div  class="subtitle">tarball: 1.1.5</div>
+  <a href="splash/gimp1_1_splash-1.7.png"><img src="splash/gimp_splash1-1.7-t.png" width="150" height="105" alt="1.7"/></a>
+  <p>CVS: 1.7<br />
+  artist:  </p>
 </td></tr>
 <tr><td>
-  <a href="splash/gimp_splash-1.10.png"><img src="splash/gimp_splash-1.10-t.png" width="120" height="150" alt="1.10"/></a>
-  <p>CVS: 1.10</p>
-  <p>version:  1.1.6</p>
-  <p>author:  tigert</p>
-</td><td>
-  <a href="splash/gimp_splash-1.12.png"><img src="splash/gimp_splash-1.12-t.png" width="120" height="150" alt="1.12"/></a>
-  <p>CVS: 1.12</p>
-  <p>version:  1.1.7</p>
-  <p>author:  tigert</p>
+  <div  class="subtitle">tarball: 1.1.6</div>
+  <a href="splash/gimp_splash1-1.10.png"><img src="splash/gimp_splash1-1.10-t.png" width="120" height="150" alt="1.10"/></a>
+  <p>CVS: 1.10<br />
+  artist:  tigert</p>
+</td>td>
+  <div  class="subtitle">tarball: 1.1.7</div>
+  <a href="splash/gimp_splash1-1.12.png"><img src="splash/gimp_splash1-1.12-t.png" width="120" height="150" alt="1.12"/></a>
+  <p>CVS: 1.12<br />
+  artist:  tigert</p>
 </td></tr>
 <tr><td>
-  <a href="splash/gimp_splash-1.12.png"><img src="splash/gimp_splash-1.12-t.png" width="120" height="150" alt="1.12"/></a>
-  <p>CVS: 1.12</p>
-  <p>version:  1.1.8</p>
-  <p>author:  tigert</p>
-</td><td>
-  <a href="splash/gimp_splash-1.15.png"><img src="splash/gimp_splash-1.15-t.png" width="150" height="135" alt="1.15"/></a>
+  <div  class="subtitle">tarball: 1.1.8</div>
+  <a href="splash/gimp_splash1-1.12.png"><img src="splash/gimp_splash1-1.12-t.png" width="120" height="150" alt="1.12"/></a>
+  <p>CVS: 1.12<br />
+  artist:  tigert</p>
+</td>td>
+  <div  class="subtitle">tarball: 1.1.9</div>
+  <a href="splash/gimp_splash1-1.15.png"><img src="splash/gimp_splash1-1.15-t.png" width="150" height="135" alt="1.15"/></a>
+  <p>CVS: 1.15<br />
+  artist:  adam</p>
+</td></tr>
+<tr><td>
+  <div  class="subtitle">tarball: 1.1.10</div>
+  <a href="splash/gimp_splash1-1.15.png"><img src="splash/gimp_splash1-1.15-t.png" width="150" height="135" alt="1.15"/></a>
+  <p>CVS: 1.15<br />
+  artist:  adam</p>
+</td>td>
+  <div  class="subtitle">tarball: 1.1.11</div>
+  <a href="splash/gimp_splash1-1.15.png"><img src="splash/gimp_splash1-1.15-t.png" width="150" height="135" alt="1.15"/></a>
+  <p>CVS: 1.15<br />
+  artist:  adam</p>
+</td></tr>
+<tr><td>
+  <div  class="subtitle">tarball: 1.1.1</div>
+  <a href="splash/gimp_splash1-1.15.png"><img src="splash/gimp_splash1-1.15-t.png" width="150" height="135" alt="1.15"/></a>
+  <p>CVS: 1.15<br />
+  artist:  adam</p>
+</td>td>
+  <div  class="subtitle">tarball: 1.1.1</div>
+  <a href="splash/gimp_splash1-1.15.png"><img src="splash/gimp_splash1-1.15-t.png" width="150" height="135" alt="1.15"/></a>
   <p>CVS: 1.15</p>
-  <p>version:  1.1.9</p>
-  <p>author:  adam</p>
+  <p>tarball:  1.1.1<br />
+  artist:  adam</p>
 </td></tr>
 <tr><td>
-  <a href="splash/gimp_splash-1.15.png"><img src="splash/gimp_splash-1.15-t.png" width="150" height="135" alt="1.15"/></a>
-  <p>CVS: 1.15</p>
-  <p>version:  1.1.10</p>
-  <p>author:  adam</p>
-</td><td>
-  <a href="splash/gimp_splash-1.15.png"><img src="splash/gimp_splash-1.15-t.png" width="150" height="135" alt="1.15"/></a>
-  <p>CVS: 1.15</p>
-  <p>version:  1.1.11</p>
-  <p>author:  adam</p>
+  <div  class="subtitle">tarball: 1.1.14</div>
+  <a href="splash/gimp_splash1-1.15.png"><img src="splash/gimp_splash1-1.15-t.png" width="150" height="135" alt="1.15"/></a>
+  <p>CVS: 1.15<br />
+  artist:  adam</p>
+</td>td>
+  <div  class="subtitle">tarball: 1.1.15</div>
+  <a href="splash/gimp_splash1-1.17.png"><img src="splash/gimp_splash1-1.17-t.png" width="138" height="150" alt="1.15"/></a>
+  <p>CVS: 1.17<br />
+  artist:  tigert</p>
 </td></tr>
 <tr><td>
-  <a href="splash/gimp_splash-1.15.png"><img src="splash/gimp_splash-1.15-t.png" width="150" height="135" alt="1.15"/></a>
-  <p>CVS: 1.15</p>
-  <p>version:  1.1.1</p>
-  <p>author:  adam</p>
-</td><td>
-  <a href="splash/gimp_splash-1.15.png"><img src="splash/gimp_splash-1.15-t.png" width="150" height="135" alt="1.15"/></a>
-  <p>CVS: 1.15</p>
-  <p>version:  1.1.1</p>
-  <p>author:  adam</p>
+  <div  class="subtitle">tarball: 1.1.16</div>
+  <a href="splash/gimp_splash1-1.17.png"><img src="splash/gimp_splash1-1.17-t.png" width="138" height="150" alt="1.15"/></a>
+  <p>CVS: 1.17<br />
+  artist:  tigert</p>
+</td>td>
+  <div  class="subtitle">tarball: 1.1.17</div>
+  <a href="splash/gimp_splash1-1.18.png"><img src="splash/gimp_splash1-1.18-t.png" width="150" height="116" alt="1.18"/></a>
+  <p>CVS: 1.18<br />
+  artist:  Raphael</p>
 </td></tr>
 <tr><td>
-  <a href="splash/gimp_splash-1.15.png"><img src="splash/gimp_splash-1.15-t.png" width="150" height="135" alt="1.15"/></a>
-  <p>CVS: 1.15</p>
-  <p>version:  1.1.1</p>
-  <p>author:  adam</p>
-</td><td>
-  <a href="splash/gimp_splash-1.17.png"><img src="splash/gimp_splash-1.17-t.png" width="138" height="150" alt="1.15"/></a>
-  <p>CVS: 1.17</p>
-  <p>version:  1.1.15</p>
-  <p>author:  tigert</p>
+  <div  class="subtitle">tarball: 1.1.18</div>
+  <a href="splash/gimp_splash1-1.19.png"><img src="splash/gimp_splash1-1.19-t.png" width="119" height="150" alt="1.19"/></a>
+  <p>CVS: 1.19<br />
+  artist:  tigert</p>
+</td>td>
+  <div  class="subtitle">tarball: 1.1.19</div>
+  <a href="splash/gimp_splash1-1.2.png"><img src="splash/gimp_splash1-1.2-t.png" width="120" height="150" alt="1.2"/></a>
+  <p>CVS: 1.2<br />
+  artist:  tigert</p>
 </td></tr>
 <tr><td>
-  <a href="splash/gimp_splash-1.17.png"><img src="splash/gimp_splash-1.17-t.png" width="138" height="150" alt="1.15"/></a>
-  <p>CVS: 1.17</p>
-  <p>version:  1.1.16</p>
-  <p>author:  tigert</p>
-</td><td>
-  <a href="splash/gimp_splash-1.18.png"><img src="splash/gimp_splash-1.18-t.png" width="150" height="116" alt="1.18"/></a>
-  <p>CVS: 1.18</p>
-  <p>version:  1.1.17</p>
-  <p>author:  Raphael</p>
+  <div  class="subtitle">tarball: 1.1.20</div>
+  <a href="splash/gimp_splash1-1.2.png"><img src="splash/gimp_splash1-1.2-t.png" width="120" height="150" alt="1.2"/></a>
+  <p>CVS: 1.2<br />
+  artist:  tigert</p>
+</td>td>
+  <div  class="subtitle">tarball: 1.1.21</div>
+  <a href="splash/gimp_splash1-1.3.png"><img src="splash/gimp_splash1-1.3-t.png" width="138" height="150" alt="1.3"/></a>
+  <p>CVS: 1.3<br />
+  artist:  tigert</p>
 </td></tr>
 <tr><td>
-  <a href="splash/gimp_splash-1.19.png"><img src="splash/gimp_splash-1.19-t.png" width="119" height="150" alt="1.19"/></a>
-  <p>CVS: 1.19</p>
-  <p>version:  1.1.18</p>
-  <p>author:  tigert</p>
-</td><td>
-  <a href="splash/gimp_splash-1.2.png"><img src="splash/gimp_splash-1.2-t.png" width="120" height="150" alt="1.2"/></a>
-  <p>CVS: 1.2</p>
-  <p>version:  1.1.19</p>
-  <p>author:  tigert</p>
-</td></tr>
-<tr><td>
-  <a href="splash/gimp_splash-1.2.png"><img src="splash/gimp_splash-1.2-t.png" width="120" height="150" alt="1.2"/></a>
-  <p>CVS: 1.2</p>
-  <p>version:  1.1.20</p>
-  <p>author:  tigert</p>
-</td><td>
-  <a href="splash/gimp_splash-1.3.png"><img src="splash/gimp_splash-1.3-t.png" width="138" height="150" alt="1.3"/></a>
+  <div  class="subtitle">tarball: </div>
+  <a href="splash/gimp_splash1-1.3.png"><img src="splash/gimp_splash1-1.3-t.png" width="138" height="150" alt="1.3"/></a>
   <p>CVS: 1.3</p>
-  <p>version:  1.1.21</p>
-  <p>author:  tigert</p>
+  <p>tarball:  1.1.22<br />
+  artist: tigert</p>
+</td>td>
+  <div  class="subtitle">tarball: 1.1.23</div>
+  <a href="splash/gimp_splash1-1.3.png"><img src="splash/gimp_splash1-1.3-t.png" width="138" height="150" alt="1.3"/></a>
+  <p>CVS: 1.3<br />
+  artist:  tigert</p>
 </td></tr>
 <tr><td>
-  <a href="splash/gimp_splash-1.3.png"><img src="splash/gimp_splash-1.3-t.png" width="138" height="150" alt="1.3"/></a>
-  <p>CVS: 1.3</p>
-  <p>version:  1.1.22</p>
-  <p>author: tigert</p>
-</td><td>
-  <a href="splash/gimp_splash-1.3.png"><img src="splash/gimp_splash-1.3-t.png" width="138" height="150" alt="1.3"/></a>
-  <p>CVS: 1.3</p>
-  <p>version:  1.1.23</p>
-  <p>author:  tigert</p>
+  <div  class="subtitle">tarball: 1.1.24</div>
+  <a href="splash/gimp_splash1-1.3.png"><img src="splash/gimp_splash1-1.3-t.png" width="138" height="150" alt="1.3"/></a>
+  <p>CVS: 1.3<br />
+  artist:  tigert</p>
+</td>td>
+  <div  class="subtitle">tarball: 1.1.25</div>
+  <a href="splash/gimp_splash1-1.5.png"><img src="splash/gimp_splash1-1.5-t.png" width="120" height="150" alt="1.5"/></a>
+  <p>CVS: 1.5<br />
+  artist:  tigert, Sven</p>
 </td></tr>
 <tr><td>
-  <a href="splash/gimp_splash-1.3.png"><img src="splash/gimp_splash-1.3-t.png" width="138" height="150" alt="1.3"/></a>
-  <p>CVS: 1.3</p>
-  <p>version:  1.1.24</p>
-  <p>author:  tigert</p>
-</td><td>
-  <a href="splash/gimp_splash-1.5.png"><img src="splash/gimp_splash-1.5-t.png" width="120" height="150" alt="1.5"/></a>
-  <p>CVS: 1.5</p>
-  <p>version:  1.1.25</p>
-  <p>author:  tigert, Sven</p>
+  <div  class="subtitle">tarball: 1.1.26</div>
+  <a href="splash/gimp_splash1-1.6.png"><img src="splash/gimp_splash1-1.6-t.png" width="150" height="102" alt="1.6"/></a>
+  <p>CVS: 1.6<br />
+  artist:  Gerald Brosseau</p>
+</td>td>
+  <div  class="subtitle">tarball: 1.1.27</div>
+  <a href="splash/gimp_splash1-1.6.png"><img src="splash/gimp_splash1-1.6-t.png" width="150" height="102" alt="1.6"/></a>
+  <p>CVS: 1.6<br />
+  artist:  Gerald Brosseau</p>
 </td></tr>
 <tr><td>
-  <a href="splash/gimp_splash-1.6.png"><img src="splash/gimp_splash-1.6-t.png" width="150" height="102" alt="1.6"/></a>
-  <p>CVS: 1.6</p>
-  <p>version:  1.1.26</p>
-  <p>author:  Gerald Brosseau</p>
-</td><td>
-  <a href="splash/gimp_splash-1.6.png"><img src="splash/gimp_splash-1.6-t.png" width="150" height="102" alt="1.6"/></a>
-  <p>CVS: 1.6</p>
-  <p>version:  1.1.27</p>
-  <p>author:  Gerald Brosseau</p>
+  <div  class="subtitle">tarball: 1.1.28</div>
+  <a href="splash/gimp_splash1-1.8.png"><img src="splash/gimp_splash1-1.8-t.png" width="150" height="102" alt="1.8"/></a>
+  <p>CVS: 1.8<br />
+  artist:  Gerald Brosseau</p>
+</td>td>
+  <div  class="subtitle">tarball: 1.1.29</div>
+  <a href="splash/gimp_splash1-1.9.png"><img src="splash/gimp_splash1-1.9-t.png" width="120" height="150" alt="1.9"/></a>
+  <p>CVS: <br />
+  artist:  simon</p>
 </td></tr>
 <tr><td>
-  <a href="splash/gimp_splash-1.8.png"><img src="splash/gimp_splash-1.8-t.png" width="150" height="102" alt="1.8"/></a>
-  <p>CVS: 1.8</p>
-  <p>version:  1.1.28</p>
-  <p>author:  Gerald Brosseau</p>
-</td><td>
-  <a href="splash/gimp_splash-1.9.png"><img src="splash/gimp_splash-1.9-t.png" width="120" height="150" alt="1.9"/></a>
-  <p>CVS: </p>
-  <p>version:  1.1.29</p>
-  <p>author:  simon</p>
-</td></tr>
-<tr><td>
-  <a href="splash/gimp_splash-1.10.png"><img src="splash/gimp_splash-1.10-t.png" width="150" height="84" alt="1.10"/></a>
+  <div  class="subtitle">tarball: 1.1.30</div>
+  <a href="splash/gimp_splash1-1.10.png"><img src="splash/gimp_splash1-1.10-t.png" width="150" height="84" alt="1.10"/></a>
+  <p>CVS:1.10 <br />
+  artist:  Sven, garrett</p>
+</td>td>
+  <div  class="subtitle">tarball: 1.1.31</div>
+  <a href="splash/gimp_splash1-1.10.png"><img src="splash/gimp_splash1-1.10-t.png" width="150" height="84" alt="1.10"/></a>
   <p>CVS:1.10 </p>
-  <p>version:  1.1.30</p>
-  <p>author:  Sven, garrett</p>
-</td><td>
-  <a href="splash/gimp_splash-1.10.png"><img src="splash/gimp_splash-1.10-t.png" width="150" height="84" alt="1.10"/></a>
-  <p>CVS:1.10 </p>
-  <p>version:  1.1.31</p>
-  <p>author:  Sven, garrett</p>
+  <p>tarball:  1.1.31<br />
+  artist:  Sven, garrett</p>
 </td></tr>
 <tr><td>
-  <a href="splash/gimp_splash-1.10.png"><img src="splash/gimp_splash-1.10-t.png" width="150" height="84" alt="1.10"/></a>
+  <div  class="subtitle">tarball: 1.1.32</div>
+  <a href="splash/gimp_splash1-1.10.png"><img src="splash/gimp_splash1-1.10-t.png" width="150" height="84" alt="1.10"/></a>
   <p>CVS:1.10 </p>
-  <p>version:  1.1.32</p>
-  <p>author:  Sven, garrett</p>
-</td><td>
-  <a href="splash/gimp_splash-1.11.png"><img src="splash/gimp_splash-1.11-t.png" width="" height="" alt="1.11"/></a>
-  <p>CVS: 1.11</p>
-  <p>version:  1.2</p>
-  <p>author:  tigert</p>
+  <p>tarball:  1.1.32<br />
+  artist:  Sven, garrett</p>
+</td>td>
+  <div  class="subtitle">tarball: 1.2.0</div>
+  <a href="splash/gimp_splash1-1.11.png"><img src="splash/gimp_splash1-1.11-t.png" width="" height="" alt="1.11"/></a>
+  <p>CVS: 1.11<br />
+  artist:  tigert</p>
 </td></tr>
 
 </table>
