--- a/about/splash.html
+++ b/about/splash.html
@@ -8,145 +8,145 @@
 <table>
 <tr><td>
   <div  class="subtitle">tarball: 1.1.0 </div>
-  <a href="splash/gimp1_1_splash-1.5.png"><img src="splash/gimp1_1_splash-1..5-t.png" width="150" height="94" alt="1.5"/></a>
+  <a href="splash/gimp1_1_splash-1.5.png"><img src="splash/gimp1_1_splash-1.5-t.png" width="150" height="94" alt="1.5"/></a>
   <p>CVS: 1.5<br />
   artist:  Adrian</p>
 </td><td>
   <div  class="subtitle">tarball:  1.1.1</div>
-  <a href="splash/gimp1_1_splash-1.5.png"><img src="splash/gimp1_1_splash-1..5-t.png" width="150" height="94" alt="1.5"/></a>
+  <a href="splash/gimp1_1_splash-1.5.png"><img src="splash/gimp1_1_splash-1.5-t.png" width="150" height="94" alt="1.5"/></a>
   <p>CVS: 1.5 <br />
   artist:  Adrian</p>
 </td></tr>
 <tr><td>
   <div  class="subtitle">tarball: 1.1.2</div>
-  <a href="splash/gimp1_1_splash-1.7.png"><img src="splash/gimp1_1_splash-1..7-t.png" width="150" height="105" alt="1.7"/></a>
+  <a href="splash/gimp1_1_splash-1.7.png"><img src="splash/gimp1_1_splash-1.7-t.png" width="150" height="105" alt="1.7"/></a>
   <p>CVS: 1.7<br />
   artist:  Adrian</p>
 </td><td>
   <div  class="subtitle">tarball: 1.1.3</div>
-  <a href="splash/gimp1_1_splash-1.7.png"><img src="splash/gimp1_1_splash-1..7-t.png" width="150" height="105" alt="1.7"/></a>
+  <a href="splash/gimp1_1_splash-1.7.png"><img src="splash/gimp1_1_splash-1.7-t.png" width="150" height="105" alt="1.7"/></a>
   <p>CVS: 1.7<br />
   artist:  Adrian</p>
 </td></tr>
 <tr><td>
   <div  class="subtitle">tarball: 1.1.4</div>
-  <a href="splash/gimp1_1_splash-1.7.png"><img src="splash/gimp1_1_splash-1..7-t.png" width="150" height="105" alt="1.7"/></a>
+  <a href="splash/gimp1_1_splash-1.7.png"><img src="splash/gimp1_1_splash-1.7-t.png" width="150" height="105" alt="1.7"/></a>
   <p>CVS: 1.7<br />
   artist:  Adrian</p>
 </td><td>
   <div  class="subtitle">tarball: 1.1.5</div>
-  <a href="splash/gimp1_1_splash-1.7.png"><img src="splash/gimp1_1_splash-1..7-t.png" width="150" height="105" alt="1.7"/></a>
+  <a href="splash/gimp1_1_splash-1.7.png"><img src="splash/gimp1_1_splash-1.7-t.png" width="150" height="105" alt="1.7"/></a>
   <p>CVS: 1.7<br />
   artist:  Adrian</p>
 </td></tr>
 <tr><td>
   <div  class="subtitle">tarball: 1.1.6</div>
-  <a href="splash/gimp1_1_splash-1..10.png"><img src="splash/gimp1_1_splash-1..10-t.png" width="120" height="150" alt="1.10"/></a>
+  <a href="splash/gimp1_1_splash-1.10.png"><img src="splash/gimp1_1_splash-1.10-t.png" width="120" height="150" alt="1.10"/></a>
   <p>CVS: 1.10<br />
   artist:  tigert</p>
 </td><td>
   <div  class="subtitle">tarball: 1.1.7</div>
-  <a href="splash/gimp1_1_splash-1..12.png"><img src="splash/gimp1_1_splash-1..12-t.png" width="120" height="150" alt="1.12"/></a>
+  <a href="splash/gimp1_1_splash-1.12.png"><img src="splash/gimp1_1_splash-1.12-t.png" width="120" height="150" alt="1.12"/></a>
   <p>CVS: 1.12<br />
   artist:  tigert</p>
 </td></tr>
 <tr><td>
   <div  class="subtitle">tarball: 1.1.8</div>
-  <a href="splash/gimp1_1_splash-1..12.png"><img src="splash/gimp1_1_splash-1..12-t.png" width="120" height="150" alt="1.12"/></a>
+  <a href="splash/gimp1_1_splash-1.12.png"><img src="splash/gimp1_1_splash-1.12-t.png" width="120" height="150" alt="1.12"/></a>
   <p>CVS: 1.12<br />
   artist:  tigert</p>
 </td><td>
   <div  class="subtitle">tarball: 1.1.9</div>
-  <a href="splash/gimp1_1_splash-1..15.png"><img src="splash/gimp1_1_splash-1..15-t.png" width="150" height="135" alt="1.15"/></a>
+  <a href="splash/gimp1_1_splash-1.15.png"><img src="splash/gimp1_1_splash-1.15-t.png" width="150" height="135" alt="1.15"/></a>
   <p>CVS: 1.15<br />
   artist:  adam</p>
 </td></tr>
 <tr><td>
   <div  class="subtitle">tarball: 1.1.10</div>
-  <a href="splash/gimp1_1_splash-1..15.png"><img src="splash/gimp1_1_splash-1..15-t.png" width="150" height="135" alt="1.15"/></a>
+  <a href="splash/gimp1_1_splash-1.15.png"><img src="splash/gimp1_1_splash-1.15-t.png" width="150" height="135" alt="1.15"/></a>
   <p>CVS: 1.15<br />
   artist:  adam</p>
 </td><td>
   <div  class="subtitle">tarball: 1.1.11</div>
-  <a href="splash/gimp1_1_splash-1..15.png"><img src="splash/gimp1_1_splash-1..15-t.png" width="150" height="135" alt="1.15"/></a>
+  <a href="splash/gimp1_1_splash-1.15.png"><img src="splash/gimp1_1_splash-1.15-t.png" width="150" height="135" alt="1.15"/></a>
   <p>CVS: 1.15<br />
   artist:  adam</p>
 </td></tr>
 <tr><td>
   <div  class="subtitle">tarball: 1.1.1</div>
-  <a href="splash/gimp1_1_splash-1..15.png"><img src="splash/gimp1_1_splash-1..15-t.png" width="150" height="135" alt="1.15"/></a>
+  <a href="splash/gimp1_1_splash-1.15.png"><img src="splash/gimp1_1_splash-1.15-t.png" width="150" height="135" alt="1.15"/></a>
   <p>CVS: 1.15<br />
   artist:  adam</p>
 </td><td>
   <div  class="subtitle">tarball: 1.1.1</div>
-  <a href="splash/gimp1_1_splash-1..15.png"><img src="splash/gimp1_1_splash-1..15-t.png" width="150" height="135" alt="1.15"/></a>
+  <a href="splash/gimp1_1_splash-1.15.png"><img src="splash/gimp1_1_splash-1.15-t.png" width="150" height="135" alt="1.15"/></a>
   <p>CVS: 1.15</p>
   artist:  adam</p>
 </td></tr>
 <tr><td>
   <div  class="subtitle">tarball: 1.1.14</div>
-  <a href="splash/gimp1_1_splash-1..15.png"><img src="splash/gimp1_1_splash-1..15-t.png" width="150" height="135" alt="1.15"/></a>
+  <a href="splash/gimp1_1_splash-1.15.png"><img src="splash/gimp1_1_splash-1.15-t.png" width="150" height="135" alt="1.15"/></a>
   <p>CVS: 1.15<br />
   artist:  adam</p>
 </td><td>
   <div  class="subtitle">tarball: 1.1.15</div>
-  <a href="splash/gimp1_1_splash-1..17.png"><img src="splash/gimp1_1_splash-1..17-t.png" width="138" height="150" alt="1.15"/></a>
+  <a href="splash/gimp1_1_splash-1.17.png"><img src="splash/gimp1_1_splash-1.17-t.png" width="138" height="150" alt="1.15"/></a>
   <p>CVS: 1.17<br />
   artist:  tigert</p>
 </td></tr>
 <tr><td>
   <div  class="subtitle">tarball: 1.1.16</div>
-  <a href="splash/gimp1_1_splash-1..17.png"><img src="splash/gimp1_1_splash-1..17-t.png" width="138" height="150" alt="1.15"/></a>
+  <a href="splash/gimp1_1_splash-1.17.png"><img src="splash/gimp1_1_splash-1.17-t.png" width="138" height="150" alt="1.15"/></a>
   <p>CVS: 1.17<br />
   artist:  tigert</p>
 </td><td>
   <div  class="subtitle">tarball: 1.1.17</div>
-  <a href="splash/gimp1_1_splash-1..18.png"><img src="splash/gimp1_1_splash-1..18-t.png" width="150" height="116" alt="1.18"/></a>
+  <a href="splash/gimp1_1_splash-1.18.png"><img src="splash/gimp1_1_splash-1.18-t.png" width="150" height="116" alt="1.18"/></a>
   <p>CVS: 1.18<br />
   artist:  Raphael</p>
 </td></tr>
 <tr><td>
   <div  class="subtitle">tarball: 1.1.18</div>
-  <a href="splash/gimp1_1_splash-1..19.png"><img src="splash/gimp1_1_splash-1..19-t.png" width="119" height="150" alt="1.19"/></a>
+  <a href="splash/gimp1_1_splash-1.19.png"><img src="splash/gimp1_1_splash-1.19-t.png" width="119" height="150" alt="1.19"/></a>
   <p>CVS: 1.19<br />
   artist:  tigert</p>
 </td><td>
   <div  class="subtitle">tarball: 1.1.19</div>
-  <a href="splash/gimp1_1_splash-1..2.png"><img src="splash/gimp1_1_splash-1..2-t.png" width="120" height="150" alt="1.2"/></a>
+  <a href="splash/gimp1_1_splash-1.2.png"><img src="splash/gimp1_1_splash-1.2-t.png" width="120" height="150" alt="1.2"/></a>
   <p>CVS: 1.2<br />
   artist:  tigert</p>
 </td></tr>
 <tr><td>
   <div  class="subtitle">tarball: 1.1.20</div>
-  <a href="splash/gimp1_1_splash-1..2.png"><img src="splash/gimp1_1_splash-1..2-t.png" width="120" height="150" alt="1.2"/></a>
+  <a href="splash/gimp1_1_splash-1.2.png"><img src="splash/gimp1_1_splash-1.2-t.png" width="120" height="150" alt="1.2"/></a>
   <p>CVS: 1.2<br />
   artist:  tigert</p>
 </td><td>
   <div  class="subtitle">tarball: 1.1.21</div>
-  <a href="splash/gimp1_1_splash-1..3.png"><img src="splash/gimp1_1_splash-1..3-t.png" width="138" height="150" alt="1.3"/></a>
+  <a href="splash/gimp1_1_splash-1.3.png"><img src="splash/gimp1_1_splash-1.3-t.png" width="138" height="150" alt="1.3"/></a>
   <p>CVS: 1.3<br />
   artist:  tigert</p>
 </td></tr>
 <tr><td>
   <div  class="subtitle">tarball: </div>
-  <a href="splash/gimp1_1_splash-1..3.png"><img src="splash/gimp1_1_splash-1..3-t.png" width="138" height="150" alt="1.3"/></a>
+  <a href="splash/gimp1_1_splash-1.3.png"><img src="splash/gimp1_1_splash-1.3-t.png" width="138" height="150" alt="1.3"/></a>
   <p>CVS: 1.3</p>
   <p>tarball:  1.1.22<br />
   artist: tigert</p>
 </td><td>
   <div  class="subtitle">tarball: 1.1.23</div>
-  <a href="splash/gimp1_1_splash-1..3.png"><img src="splash/gimp1_1_splash-1..3-t.png" width="138" height="150" alt="1.3"/></a>
+  <a href="splash/gimp1_1_splash-1.3.png"><img src="splash/gimp1_1_splash-1.3-t.png" width="138" height="150" alt="1.3"/></a>
   <p>CVS: 1.3<br />
   artist:  tigert</p>
 </td></tr>
 <tr><td>
   <div  class="subtitle">tarball: 1.1.24</div>
-  <a href="splash/gimp1_1_splash-1..3.png"><img src="splash/gimp1_1_splash-1..3-t.png" width="138" height="150" alt="1.3"/></a>
+  <a href="splash/gimp1_1_splash-1.3.png"><img src="splash/gimp1_1_splash-1.3-t.png" width="138" height="150" alt="1.3"/></a>
   <p>CVS: 1.3<br />
   artist:  tigert</p>
 </td><td>
   <div  class="subtitle">tarball: 1.1.25</div>
-  <a href="splash/gimp1_1_splash-1..5.png"><img src="splash/gimp1_1_splash-1..5-t.png" width="120" height="150" alt="1.5"/></a>
+  <a href="splash/gimp1_1_splash-1.5.png"><img src="splash/gimp1_1_splash-1.5-t.png" width="120" height="150" alt="1.5"/></a>
   <p>CVS: 1.5<br />
   artist:  tigert, Sven</p>
 </td></tr>
