--- a/about/splash.html
+++ b/about/splash.html
@@ -52,51 +52,51 @@
 </td></tr>
 <tr><td>
   <div  class="subtitle">tarball: 1.1.8</div>
-  <a href="splash/gimp1_1_splash-1.12.png"><img src="splash/gimp1_1_splash-1.12-t.png" width="120" height="150" alt="1.12"/></a>
+  <a href="splash/gimp1_1_splash.1.12.png"><img src="splash/gimp1_1_splash.1.12-t.png" width="120" height="150" alt="1.12"/></a>
   <p>CVS: 1.12<br />
   artist:  tigert</p>
 </td><td>
   <div  class="subtitle">tarball: 1.1.9</div>
-  <a href="splash/gimp1_1_splash-1.15.png"><img src="splash/gimp1_1_splash-1.15-t.png" width="150" height="135" alt="1.15"/></a>
+  <a href="splash/gimp1_1_splash.1.15.png"><img src="splash/gimp1_1_splash.1.15-t.png" width="150" height="135" alt="1.15"/></a>
   <p>CVS: 1.15<br />
   artist:  adam</p>
 </td></tr>
 <tr><td>
   <div  class="subtitle">tarball: 1.1.10</div>
-  <a href="splash/gimp1_1_splash-1.15.png"><img src="splash/gimp1_1_splash-1.15-t.png" width="150" height="135" alt="1.15"/></a>
+  <a href="splash/gimp1_1_splash.1.15.png"><img src="splash/gimp1_1_splash.1.15-t.png" width="150" height="135" alt="1.15"/></a>
   <p>CVS: 1.15<br />
   artist:  adam</p>
 </td><td>
   <div  class="subtitle">tarball: 1.1.11</div>
-  <a href="splash/gimp1_1_splash-1.15.png"><img src="splash/gimp1_1_splash-1.15-t.png" width="150" height="135" alt="1.15"/></a>
+  <a href="splash/gimp1_1_splash.1.15.png"><img src="splash/gimp1_1_splash.1.15-t.png" width="150" height="135" alt="1.15"/></a>
   <p>CVS: 1.15<br />
   artist:  adam</p>
 </td></tr>
 <tr><td>
   <div  class="subtitle">tarball: 1.1.12</div>
-  <a href="splash/gimp1_1_splash-1.15.png"><img src="splash/gimp1_1_splash-1.15-t.png" width="150" height="135" alt="1.15"/></a>
+  <a href="splash/gimp1_1_splash.1.15.png"><img src="splash/gimp1_1_splash.1.15-t.png" width="150" height="135" alt="1.15"/></a>
   <p>CVS: 1.15<br />
   artist:  adam</p>
 </td><td>
   <div  class="subtitle">tarball: 1.1.13</div>
-  <a href="splash/gimp1_1_splash-1.15.png"><img src="splash/gimp1_1_splash-1.15-t.png" width="150" height="135" alt="1.15"/></a>
+  <a href="splash/gimp1_1_splash.1.15.png"><img src="splash/gimp1_1_splash.1.15-t.png" width="150" height="135" alt="1.15"/></a>
   <p>CVS: 1.15<br />
   artist:  adam</p>
 </td></tr>
 <tr><td>
   <div  class="subtitle">tarball: 1.1.14</div>
-  <a href="splash/gimp1_1_splash-1.15.png"><img src="splash/gimp1_1_splash-1.15-t.png" width="150" height="135" alt="1.15"/></a>
+  <a href="splash/gimp1_1_splash.1.15.png"><img src="splash/gimp1_1_splash.1.15-t.png" width="150" height="135" alt="1.15"/></a>
   <p>CVS: 1.15<br />
   artist:  adam</p>
 </td><td>
   <div  class="subtitle">tarball: 1.1.15</div>
-  <a href="splash/gimp1_1_splash-1.17.png"><img src="splash/gimp1_1_splash-1.17-t.png" width="138" height="150" alt="1.17"/></a>
+  <a href="splash/gimp1_1_splash.1.17.png"><img src="splash/gimp1_1_splash.1.17-t.png" width="138" height="150" alt="1.17"/></a>
   <p>CVS: 1.17<br />
   artist:  tigert</p>
 </td></tr>
 <tr><td>
   <div  class="subtitle">tarball: 1.1.16</div>
-  <a href="splash/gimp1_1_splash-1.17.png"><img src="splash/gimp1_1_splash-1.17-t.png" width="138" height="150" alt="1.17"/></a>
+  <a href="splash/gimp1_1_splash.1.17.png"><img src="splash/gimp1_1_splash.1.17-t.png" width="138" height="150" alt="1.17"/></a>
   <p>CVS: 1.17<br />
   artist:  tigert</p>
 </td><td>
@@ -112,40 +112,41 @@
   artist:  tigert</p>
 </td><td>
   <div  class="subtitle">tarball: 1.1.19</div>
-  <a href="splash/gimp1_1_splash-1.2.png"><img src="splash/gimp1_1_splash-1.2-t.png" width="120" height="150" alt="1.2"/></a>
+  <a href="gimp_splash.1.2.png"><img src="gimp_splash.1.2-t.png" width="120" height="150" alt="1.2"/></a>
   <p>CVS: 1.2<br />
   artist:  tigert</p>
 </td></tr>
 <tr><td>
-  <a href="splash/gimp1_1_splash-1.11.png"><img src="splash/gimp1_1_splash-1.11-t.png" width="120" height="150" alt="1.11"/></a>
+  <div  class="subtitle">tarball: 1.1.20</div>
+  <a href="gimp_splash.1.11.png"><img src="gimp_splash.1.11-t.png" width="120" height="150" alt="1.11"/></a>
   <p>CVS: 1.11<br />
   artist:  tigert</p>
 </td><td>
   <div  class="subtitle">tarball: 1.1.21</div>
-  <a href="splash/gimp1_1_splash-1.3.png"><img src="splash/gimp1_1_splash-1.3-t.png" width="138" height="150" alt="1.3"/></a>
+  <a href="gimp_splash.1.3.png"><img src="gimp_splash.1.3-t.png" width="138" height="150" alt="1.3"/></a>
   <p>CVS: 1.3<br />
   artist:  tigert</p>
 </td></tr>
 <tr><td>
-  <div  class="subtitle">tarball: </div>
-  <a href="splash/gimp1_1_splash-1.3.png"><img src="splash/gimp1_1_splash-1.3-t.png" width="138" height="150" alt="1.3"/></a>
+  <div  class="subtitle">tarball: 1.1.22</div>
+  <a href="gimp_splash.1.3.png"><img src="gimp_splash.1.3-t.png" width="138" height="150" alt="1.3"/></a>
   <p>CVS: 1.3</p>
   <p>tarball:  1.1.22<br />
   artist: tigert</p>
 </td><td>
   <div  class="subtitle">tarball: 1.1.23</div>
-  <a href="splash/gimp1_1_splash-1.3.png"><img src="splash/gimp1_1_splash-1.3-t.png" width="138" height="150" alt="1.3"/></a>
+  <a href="gimp_splash.1.3.png"><img src="gimp_splash.1.3-t.png" width="138" height="150" alt="1.3"/></a>
   <p>CVS: 1.3<br />
   artist:  tigert</p>
 </td></tr>
 <tr><td>
   <div  class="subtitle">tarball: 1.1.24</div>
-  <a href="splash/gimp1_1_splash-1.3.png"><img src="splash/gimp1_1_splash-1.3-t.png" width="138" height="150" alt="1.3"/></a>
+  <a href="gimp_splash.1.3.png"><img src="gimp_splash.1.3-t.png" width="138" height="150" alt="1.3"/></a>
   <p>CVS: 1.3<br />
   artist:  tigert</p>
 </td><td>
   <div  class="subtitle">tarball: 1.1.25</div>
-  <a href="splash/gimp1_1_splash-1.5.png"><img src="splash/gimp1_1_splash-1.5-t.png" width="120" height="150" alt="1.5"/></a>
+  <a href="splash/gimp_splash.1.5"><img src="splash/gimp_splash.1.5-t.png" width="120" height="150" alt="1.5"/></a>
   <p>CVS: 1.5<br />
   artist:  tigert, Sven</p>
 </td></tr>
