--- a/about/splash.html
+++ b/about/splash.html
@@ -112,36 +112,35 @@
   artist:  tigert</p>
 </td><td>
   <div  class="subtitle">tarball: 1.1.19</div>
-  <a href="gimp_splash.1.2.png"><img src="gimp_splash.1.2-t.png" width="120" height="150" alt="1.2"/></a>
+  <a href="splash/gimp_splash.1.2.png"><img src="splash/gimp_splash.1.2-t.png" width="120" height="150" alt="1.2"/></a>
   <p>CVS: 1.2<br />
   artist:  tigert</p>
 </td></tr>
 <tr><td>
   <div  class="subtitle">tarball: 1.1.20</div>
-  <a href="gimp_splash.1.11.png"><img src="gimp_splash.1.11-t.png" width="120" height="150" alt="1.11"/></a>
+  <a href="splash/gimp_splash.1.11.png"><img src="splash/gimp_splash.1.11-t.png" width="120" height="150" alt="1.11"/></a>
   <p>CVS: 1.11<br />
   artist:  tigert</p>
 </td><td>
   <div  class="subtitle">tarball: 1.1.21</div>
-  <a href="gimp_splash.1.3.png"><img src="gimp_splash.1.3-t.png" width="138" height="150" alt="1.3"/></a>
+  <a href="splash/gimp_splash.1.3.png"><img src="splash/gimp_splash.1.3-t.png" width="138" height="150" alt="1.3"/></a>
   <p>CVS: 1.3<br />
   artist:  tigert</p>
 </td></tr>
 <tr><td>
   <div  class="subtitle">tarball: 1.1.22</div>
-  <a href="gimp_splash.1.3.png"><img src="gimp_splash.1.3-t.png" width="138" height="150" alt="1.3"/></a>
-  <p>CVS: 1.3</p>
-  <p>tarball:  1.1.22<br />
+  <a href="splash/gimp_splash.1.3.png"><img src="splash/gimp_splash.1.3-t.png" width="138" height="150" alt="1.3"/></a>
+  <p>CVS: 1.3
   artist: tigert</p>
 </td><td>
   <div  class="subtitle">tarball: 1.1.23</div>
-  <a href="gimp_splash.1.3.png"><img src="gimp_splash.1.3-t.png" width="138" height="150" alt="1.3"/></a>
+  <a href="splash/gimp_splash.1.3.png"><img src="splash/gimp_splash.1.3-t.png" width="138" height="150" alt="1.3"/></a>
   <p>CVS: 1.3<br />
   artist:  tigert</p>
 </td></tr>
 <tr><td>
   <div  class="subtitle">tarball: 1.1.24</div>
-  <a href="gimp_splash.1.3.png"><img src="gimp_splash.1.3-t.png" width="138" height="150" alt="1.3"/></a>
+  <a href="splash/gimp_splash.1.3.png"><img src="splash/gimp_splash.1.3-t.png" width="138" height="150" alt="1.3"/></a>
   <p>CVS: 1.3<br />
   artist:  tigert</p>
 </td><td>
@@ -152,45 +151,45 @@
 </td></tr>
 <tr><td>
   <div  class="subtitle">tarball: 1.1.26</div>
-  <a href="splash/gimp1_1_splash.1.1.6.png"><img src="splash/gimp1_1_splash.1.1.6-t.png" width="150" height="102" alt="1.6"/></a>
+  <a href="splash/gimp_splash.1.6.png"><img src="splash/gimp_splash.1.6-t.png" width="150" height="102" alt="1.6"/></a>
   <p>CVS: 1.6<br />
   artist:  Gerald Brosseau</p>
 </td><td>
   <div  class="subtitle">tarball: 1.1.27</div>
-  <a href="splash/gimp1_1_splash.1.1.6.png"><img src="splash/gimp1_1_splash.1.1.6-t.png" width="150" height="102" alt="1.6"/></a>
+  <a href="splash/gimp_splash.1.6.png"><img src="splash/gimp_splash.1.6-t.png" width="150" height="102" alt="1.6"/></a>
   <p>CVS: 1.6<br />
   artist:  Gerald Brosseau</p>
 </td></tr>
 <tr><td>
   <div  class="subtitle">tarball: 1.1.28</div>
-  <a href="splash/gimp1_1_splash.1.1.8.png"><img src="splash/gimp1_1_splash.1.1.8-t.png" width="150" height="102" alt="1.8"/></a>
+  <a href="splash/gimp_splash.1.8.png"><img src="splash/gimp_splash.1.8-t.png" width="150" height="102" alt="1.8"/></a>
   <p>CVS: 1.8<br />
   artist:  Gerald Brosseau</p>
 </td><td>
   <div  class="subtitle">tarball: 1.1.29</div>
-  <a href="splash/gimp1_1_splash.1.1.9.png"><img src="splash/gimp1_1_splash.1.1.9-t.png" width="120" height="150" alt="1.9"/></a>
+  <a href="splash/gimp_splash.1.9.png"><img src="splash/gimp_splash.1.9-t.png" width="120" height="150" alt="1.9"/></a>
   <p>CVS: <br />
   artist:  simon</p>
 </td></tr>
 <tr><td>
   <div  class="subtitle">tarball: 1.1.30</div>
-  <a href="splash/gimp1_1_splash.1.1.10.png"><img src="splash/gimp1_1_splash.1.1.10-t.png" width="150" height="84" alt="1.10"/></a>
+  <a href="splash/gimp_splash.1.10.png"><img src="splash/gimp_splash.1.10-t.png" width="150" height="84" alt="1.10"/></a>
   <p>CVS:1.10 <br />
   artist:  Sven, garrett</p>
 </td><td>
   <div  class="subtitle">tarball: 1.1.31</div>
-  <a href="splash/gimp1_1_splash.1.1.10.png"><img src="splash/gimp1_1_splash.1.1.10-t.png" width="150" height="84" alt="1.10"/></a>
+  <a href="splash/gimp_splash.1.10.png"><img src="splash/gimp_splash.1.10-t.png" width="150" height="84" alt="1.10"/></a>
   <p>CVS:1.10 <br />
   artist:  Sven, garrett</p>
 </td></tr>
 <tr><td>
   <div  class="subtitle">tarball: 1.1.32</div>
-  <a href="splash/gimp1_1_splash.1.1.10.png"><img src="splash/gimp1_1_splash.1.1.10-t.png" width="150" height="84" alt="1.10"/></a>
+  <a href="splash/gimp_splash.1.10.png"><img src="splash/gimp_splash.1.10-t.png" width="150" height="84" alt="1.10"/></a>
   <p>CVS:1.10 <br />
   artist:  Sven, garrett</p>
 </td><td>
   <div  class="subtitle">tarball: 1.2.0</div>
-  <a href="splash/gimp1_1_splash-1.11.png"><img src="splash/gimp1_1_splash-1.11-t.png" width="120" height="150" alt="1.11"/></a>
+  <a href="splash/gimp_splash.1.11.png"><img src="splash/gimp_splash.1.11-t.png" width="120" height="150" alt="1.11"/></a>
   <p>CVS: 1.11<br />
   artist:  tigert</p>
 </td></tr>
